default/radarr/radarr-api-ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: radarr-api
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
  labels:
    app.kubernetes.io/instance: radarr
    app.kubernetes.io/name: radarr

spec:
  rules:
  - host: "radarr.donoso.family"
    http:
      paths:
      - backend:
          serviceName: radarr
          servicePort: http
        path: /api
  tls:
  - hosts:
    - "radarr.donoso.family"
